[package]
name = "rusty-gfm-html"
version = "0.2.0"
authors = ["Nathaniel Graham <nathaniel.graham@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.8.2"
clap = "2.33.3"
regex = "1.4.1"
base64 = "0.13.0"